--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -16,7 +16,14 @@ reqwest = { version = "0.12.9", features = ["json"] }
 atprotolib-rs = { git = "https://github.com/Smalls1652/atprotolib-rs.git", features = [
     "apicalls",
 ] }
-tokio = { version = "1.41.1", features = ["full"] }
+tokio = { version = "1.41.1", features = [
+    "io-util",
+    "rt",
+    "macros",
+    "signal",
+    "sync",
+    "time"
+] }
 megalodon = "0.14.1"
 dotenvy = "0.15.7"
 dom_query = "0.10.0"
@@ -26,7 +33,11 @@ diesel = { version = "2.2.5", features = [
     "returning_clauses_for_sqlite_3_35",
     "sqlite",
 ] }
-tokio-util = { version = "0.7.12", features = ["full"] }
+tokio-util = { version = "0.7.12", features = [
+    "io-util",
+    "rt",
+    "time"
+] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
