--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -12,7 +12,7 @@ build = "build.rs"
 chrono = { version = "0.4.38", features = ["serde"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
-reqwest = { version = "0.12.9", features = ["json"] }
+reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
 atprotolib-rs = { git = "https://github.com/Smalls1652/atprotolib-rs.git", features = [
     "apicalls",
 ] }
@@ -21,7 +21,7 @@ tokio = { version = "1.41.1", features = [
     "macros",
     "signal",
     "sync",
-    "time"
+    "time",
 ] }
 megalodon = "0.14.1"
 dotenvy = "0.15.7"
@@ -32,10 +32,7 @@ diesel = { version = "2.2.5", features = [
     "returning_clauses_for_sqlite_3_35",
     "sqlite",
 ] }
-tokio-util = { version = "0.7.12", features = [
-    "rt",
-    "time"
-] }
+tokio-util = { version = "0.7.12", features = ["rt", "time"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
