--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -36,3 +36,4 @@ tokio-util = { version = "0.7.12", features = ["rt", "time"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
+rand = "0.8.5"
