--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { version = "1.41.1", features = [
     "signal",
     "sync",
     "time",
+    "tracing"
 ] }
 megalodon = "0.14.1"
 dotenvy = "0.15.7"
@@ -37,6 +38,6 @@ diesel = { version = "2.2.5", features = [
 ] }
 tokio-util = { version = "0.7.12", features = ["rt", "time"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 rand = "0.8.5"
