--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,20 +9,11 @@
         "color": "terminal.ansiGreen"
       },
       "type": "process",
-      "osx": {
-        "command": "/bin/bash",
-        "args": [
-          "-c",
-          "${workspaceFolder}/tools/Build-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
-        ]
-      },
-      "linux":{
-        "command": "/bin/bash",
-        "args": [
-          "-c",
-          "${workspaceFolder}/tools/Build-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
-        ]
-      },
+      "command": "/bin/bash",
+      "args": [
+        "-c",
+        "${workspaceFolder}/tools/Build-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
+      ],
       "windows": {
         "command": "pwsh",
         "args": [
@@ -58,20 +49,11 @@
         "color": "terminal.ansiYellow"
       },
       "type": "process",
-      "osx": {
-        "command": "/bin/bash",
-        "args": [
-          "-c",
-          "${workspaceFolder}/tools/Clean-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
-        ]
-      },
-      "linux":{
-        "command": "/bin/bash",
-        "args": [
-          "-c",
-          "${workspaceFolder}/tools/Clean-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
-        ]
-      },
+      "command": "/bin/bash",
+      "args": [
+        "-c",
+        "${workspaceFolder}/tools/Clean-Package.sh -n ${input:packageName} -p ${input:buildProfile}"
+      ],
       "windows": {
         "command": "pwsh",
         "args": [
@@ -83,6 +65,42 @@
           "${input:packageName}",
           "-BuildProfile",
           "${input:buildProfile}",
+          "-Verbose"
+        ]
+      },
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": true
+      },
+      "problemMatcher": "$rustc"
+    },
+    {
+      "label": "Build fediproto-sync",
+      "hide": true,
+      "type": "process",
+      "command": "/bin/bash",
+      "args": [
+        "-c",
+        "${workspaceFolder}/tools/Build-Package.sh -n fediproto-sync -p Debug"
+      ],
+      "windows": {
+        "command": "pwsh",
+        "args": [
+          "-NoLogo",
+          "-NoProfile",
+          "-File",
+          "${workspaceFolder}/tools/Build-Package.ps1",
+          "-PackageName",
+          "fediproto-sync",
+          "-BuildProfile",
+          "Debug",
           "-Verbose"
         ]
       },
