Switch database to Postgres (#4)
* Start work on migrating to Postgres

* Update migrations

* Update diesel features and add uuid crate

* Update models and schema

* Update gitignore

* Add Docker Compose file for local PG db

--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -26,11 +26,14 @@ dom_query = "0.10.0"
 tendril = "0.4.3"
 diesel = { version = "2.2.6", features = [
     "chrono",
-    "returning_clauses_for_sqlite_3_35",
-    "sqlite",
+    "serde_json",
+    "uuid",
+    "postgres",
+    "postgres_backend"
 ] }
 tokio-util = { version = "0.7.12", features = ["rt", "time"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 rand = "0.8.5"
+uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
