--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -37,3 +37,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 rand = "0.8.5"
 uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
+
+[build-dependencies]
+git-version = "0.3.9"
+toml_edit = "0.22.22"
