Update run task
To select the environment for a specific DB type

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -98,7 +98,7 @@
       "options": {
         "cwd": "${workspaceFolder}",
         "env": {
-          "FEDIPROTO_SYNC_ENVIRONMENT": "Development"
+          "FEDIPROTO_SYNC_ENVIRONMENT": "Development_${input:dbType}",
         }
       },
       "presentation": {
