--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -39,6 +39,8 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 rand = "0.8.5"
 uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
+oauth2 = "4.4.2"
+url = "2.5.4"
 
 [build-dependencies]
 git-version = "0.3.9"
