--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -41,6 +41,7 @@ rand = "0.8.5"
 uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
 oauth2 = "4.4.2"
 url = "2.5.4"
+openssl = "0.10.68"
 
 [build-dependencies]
 git-version = "0.3.9"
