--- a/.github/workflows/create-container-image.yml
+++ b/.github/workflows/create-container-image.yml
@@ -53,6 +53,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Build container image"
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: ./
