--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -42,7 +42,7 @@ uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
 oauth2 = "4.4.2"
 url = "2.5.4"
 bytes = "1.9.0"
-boring = "4.13.0"
+openssl = "0.10.68"
 
 [build-dependencies]
 git-version = "0.3.9"
