--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -9,6 +9,8 @@ repository.workspace = true
 build = "build.rs"
 
 [dependencies]
+fediproto-sync-db = { path = "../fediproto-sync-db" }
+fediproto-sync-lib = { path = "../fediproto-sync-lib" }
 atprotolib-rs = { git = "https://github.com/Smalls1652/atprotolib-rs.git", features = [
     "apicalls",
 ] }
