Add database connection pooling

--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -18,7 +18,8 @@ diesel = { version = "2.2.6", features = [
     "postgres",
     "postgres_backend",
     "sqlite",
-    "returning_clauses_for_sqlite_3_35"
+    "returning_clauses_for_sqlite_3_35",
+    "r2d2"
 ] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 megalodon = "0.14.1"
