--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ resolver = "2"
 package.authors = []
 package.homepage = ""
 package.repository = ""
+
+[profile.release]
+opt-level = "z"
+lto = true
