--- a/fediproto-sync-auth-ui/Cargo.toml
+++ b/fediproto-sync-auth-ui/Cargo.toml
@@ -7,26 +7,23 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-fediproto-sync-db = { path = "../fediproto-sync-db" }
-fediproto-sync-lib = { path = "../fediproto-sync-lib" }
+anyhow = "1.0.94"
+async-session = "3.0.0"
 axum = { version = "0.7.9", features = ["macros"] }
-tower = "0.5.2"
-tracing = "0.1.41"
-tokio = { version = "1.42.0", features = ["full"] }
-oauth2 = "4.4.2"
-megalodon = "0.14.1"
+axum-extra = { version = "0.9.6", features = ["typed-header"] }
 diesel = { version = "2.2.6", features = [
     "chrono",
-    "serde_json",
-    "uuid",
     "postgres",
     "postgres_backend",
-    "sqlite",
+    "r2d2",
     "returning_clauses_for_sqlite_3_35",
-    "r2d2"
+    "serde_json",
+    "sqlite",
+    "uuid",
 ] }
-async-session = "3.0.0"
-anyhow = "1.0.94"
-serde = "1.0.216"
-serde_json = "1.0.133"
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
+fediproto-sync-db = { path = "../fediproto-sync-db" }
+fediproto-sync-lib = { path = "../fediproto-sync-lib" }
+oauth2 = "4.4.2"
+serde = { version = "1.0.216", features = ["derive"] }
+tokio = { version = "1.42.0", features = ["full"] }
+tracing = "0.1.41"
