--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -9,28 +9,24 @@ repository.workspace = true
 build = "build.rs"
 
 [dependencies]
-fediproto-sync-lib = { path = "../fediproto-sync-lib" }
 chrono = { version = "0.4.39", features = ["serde"] }
 diesel = { version = "2.2.6", features = [
     "chrono",
-    "serde_json",
-    "uuid",
     "postgres",
     "postgres_backend",
-    "sqlite",
+    "r2d2",
     "returning_clauses_for_sqlite_3_35",
-    "r2d2"
+    "serde_json",
+    "sqlite",
+    "uuid",
 ] }
-diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
+diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
+fediproto-sync-lib = { path = "../fediproto-sync-lib" }
 megalodon = "0.14.1"
 openssl = "0.10.68"
-serde = { version = "1.0.216", features = ["derive"] }
-tokio = { version = "1.42.0", features = [
-    "io-std",
-    "io-util"
-] }
+tokio = { version = "1.42.0", features = ["io-std", "io-util"] }
 tracing = "0.1.41"
-uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
+uuid = { version = "1.11.0", features = ["fast-rng", "v4", "v7"] }
 
 [build-dependencies]
 git-version = "0.3.9"
