--- a/fediproto-sync-auth-ui/Cargo.toml
+++ b/fediproto-sync-auth-ui/Cargo.toml
@@ -6,6 +6,8 @@ authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
+build = "build.rs"
+
 [dependencies]
 anyhow = "1.0.94"
 async-session = "3.0.0"
@@ -27,3 +29,7 @@ oauth2 = "4.4.2"
 serde = { version = "1.0.216", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
+
+[build-dependencies]
+git-version = "0.3.9"
+toml_edit = "0.22.22"
