--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -29,6 +29,7 @@ dotenvy = "0.15.7"
 fediproto-sync-auth-ui = { path = "../fediproto-sync-auth-ui" }
 fediproto-sync-db = { path = "../fediproto-sync-db" }
 fediproto-sync-lib = { path = "../fediproto-sync-lib" }
+image = "0.25.5"
 megalodon = "0.14.1"
 rand = "0.8.5"
 reqwest = { version = "0.12.9", features = [
