--- a/atprotolib-rs/Cargo.toml
+++ b/atprotolib-rs/Cargo.toml
@@ -10,9 +10,12 @@ license-file.workspace = true
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
+reqwest = { version = "0.12.9", features = [
+    "json",
+    "rustls-tls",
+], default-features = false, optional = true }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
-reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], optional = true, default-features = false }
 
 [features]
 apicalls = ["dep:reqwest"]
