--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -9,9 +9,7 @@ repository.workspace = true
 build = "build.rs"
 
 [dependencies]
-atprotolib-rs = { path = "../atprotolib-rs", features = [
-    "apicalls",
-] }
+atprotolib-rs = { path = "../atprotolib-rs", features = ["apicalls"] }
 bytes = "1.9.0"
 chrono = { version = "0.4.39", features = ["serde"] }
 diesel = { version = "2.2.6", features = [
