--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ members = [
 ]
 resolver = "2"
 
-package.authors = []
-package.homepage = ""
-package.repository = ""
+package.authors = [
+    "Tim Small"
+]
+package.homepage = "https://github.com/Smalls1652/fediproto-sync"
+package.repository = "https://github.com/Smalls1652/fediproto-sync"
 package.license-file = "LICENSE"
 
 [profile.release]
