--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -2,9 +2,11 @@
 name = "fediproto-sync-db"
 version = "0.1.0"
 edition = "2021"
+description = "Library for fediproto-sync database operations and models."
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
+license-file.workspace = true
 
 build = "build.rs"
 
