--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -2,9 +2,11 @@
 name = "fediproto-sync-lib"
 version = "0.1.0"
 edition = "2021"
+description = "Shared library for fediproto-sync."
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
+license-file.workspace = true
 
 [dependencies]
 openssl = "0.10.68"
