--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -2,9 +2,11 @@
 name = "fediproto-sync"
 version = "0.1.0"
 edition = "2021"
+description = "A daemon for syncing Mastodon posts to BlueSky automatically."
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
+license-file.workspace = true
 
 build = "build.rs"
 
