--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -39,6 +39,7 @@ reqwest = { version = "0.12.9", features = [
     "json",
     "rustls-tls",
 ], default-features = false }
+serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
