--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -9,7 +9,9 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
+anyhow = "1.0.95"
 openssl = "0.10.68"
+thiserror = "2.0.9"
 
 [build-dependencies]
 git-version = "0.3.9"
