--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -11,6 +11,7 @@ license-file.workspace = true
 build = "build.rs"
 
 [dependencies]
+anyhow = "1.0.95"
 atrium-api = "0.24.9"
 atrium-xrpc-client = "0.5.10"
 bytes = "1.9.0"
