Switch to anyhow and modify error handling (#37)
* Add anyhow

* Remove with_source and source property

* Enable backtrace

* Update return types and error initialization

* Add thiserror

* Add dedicated error type for DB errors

* Update to use thiserror

* Implement error changes

* Remove anyhow from lib

* Update anyhow in auth-ui

--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -11,6 +11,7 @@ license-file.workspace = true
 build = "build.rs"
 
 [dependencies]
+anyhow = "1.0.95"
 chrono = { version = "0.4.39", features = ["serde"] }
 diesel = { version = "2.2.6", features = [
     "chrono",
@@ -26,6 +27,7 @@ diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
 fediproto-sync-lib = { path = "../fediproto-sync-lib" }
 megalodon = "0.14.2"
 openssl = "0.10.68"
+thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["io-std", "io-util"] }
 tracing = "0.1.41"
 uuid = { version = "1.11.0", features = ["fast-rng", "v4", "v7"] }
