--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -10,6 +10,7 @@ license-file.workspace = true
 
 [dependencies]
 openssl = "0.10.68"
+thiserror = "2.0.9"
 
 [build-dependencies]
 git-version = "0.3.9"
