--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,13 @@
 members = [
     "fediproto-sync",
     "fediproto-sync-auth-ui",
+    "fediproto-sync-build-macros",
     "fediproto-sync-db",
-    "fediproto-sync-lib"
+    "fediproto-sync-lib",
 ]
 resolver = "2"
 
-package.authors = [
-    "Tim Small"
-]
+package.authors = ["Tim Small"]
 package.homepage = "https://github.com/Smalls1652/fediproto-sync"
 package.repository = "https://github.com/Smalls1652/fediproto-sync"
 package.license-file = "LICENSE"
