--- a/fediproto-sync-auth-ui/Cargo.toml
+++ b/fediproto-sync-auth-ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fediproto-sync-auth-ui"
-version = "0.1.0"
+version = "0.1.0-b472f68"
 edition = "2021"
 description = "Authentication web server for fediproto-sync."
 authors.workspace = true
@@ -33,5 +33,4 @@ tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
 
 [build-dependencies]
-git-version = "0.3.9"
-toml_edit = "0.22.22"
+fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
