--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fediproto-sync-lib"
-version = "0.1.0"
+version = "0.1.0-b472f68-b472f68-b472f68-b472f68"
 edition = "2021"
 description = "Shared library for fediproto-sync."
 authors.workspace = true
@@ -13,5 +13,4 @@ openssl = "0.10.68"
 thiserror = "2.0.9"
 
 [build-dependencies]
-git-version = "0.3.9"
-toml_edit = "0.22.22"
+fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
