--- a/fediproto-sync-auth-ui/Cargo.toml
+++ b/fediproto-sync-auth-ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fediproto-sync-auth-ui"
-version = "0.1.0-b472f68"
+version = "0.1.0"
 edition = "2021"
 description = "Authentication web server for fediproto-sync."
 authors.workspace = true
