--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fediproto-sync-lib"
-version = "0.1.0-b472f68-b472f68-b472f68-b472f68"
+version = "0.1.0"
 edition = "2021"
 description = "Shared library for fediproto-sync."
 authors.workspace = true
