--- a/.github/workflows/create-artifacts.yml
+++ b/.github/workflows/create-artifacts.yml
@@ -26,7 +26,7 @@ jobs:
           toolchain: nightly
 
       - name: Install targets
-        shell: pwsh
+        shell: bash
         run: |
           rustup target add x86_64-unknown-linux-gnu
 
@@ -40,7 +40,7 @@ jobs:
         uses: cargo-bins/cargo-binstall@main
 
       - name: Install cargo cross
-        shell: pwsh
+        shell: bash
         run: |
           cargo binstall --no-confirm cross
 
