--- a/.github/workflows/create-artifacts.yml
+++ b/.github/workflows/create-artifacts.yml
@@ -46,18 +46,20 @@ jobs:
 
       - name: Build (Linux - x64)
         shell: bash
+        env:
+          FEDIPROTOSYNC_INCLUDE_COMMIT_HASH: "${{ github.event_name == 'workflow_dispatch' || 'false' }}"
+          FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION: "true"
         run: |
-          FEDIPROTOSYNC_INCLUDE_COMMIT_HASH="${{ github.event_name == 'workflow_dispatch' || 'false' }}" \
-          FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION="true" \
           cross build --target "x86_64-unknown-linux-gnu" --release;
           mkdir -p "${{ github.workspace }}/artifacts/linux-x64";
           cp "${{ github.workspace }}/target/x86_64-unknown-linux-gnu/release/fediproto-sync" "${{ github.workspace }}/artifacts/linux-x64/fediproto-sync";
 
       - name: Build (Linux - arm64)
         shell: bash
+        env:
+          FEDIPROTOSYNC_INCLUDE_COMMIT_HASH: "${{ github.event_name == 'workflow_dispatch' || 'false' }}"
+          FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION: "true"
         run: |
-          FEDIPROTOSYNC_INCLUDE_COMMIT_HASH="${{ github.event_name == 'workflow_dispatch' || 'false' }}" \
-          FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION="true" \
           cross build --target "aarch64-unknown-linux-gnu" --release;
           mkdir -p "${{ github.workspace }}/artifacts/linux-arm64";
           cp "${{ github.workspace }}/target/aarch64-unknown-linux-gnu/release/fediproto-sync" "${{ github.workspace }}/artifacts/linux-arm64/fediproto-sync";
