--- a/Cross.toml
+++ b/Cross.toml
@@ -1,4 +1,8 @@
 [build]
+build-std = false
+xargo = true
+zig = false
+default-target = "x86_64-unknown-linux-gnu"
 pre-build = [
     "apt-get update && apt-get install -y g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross build-essential crossbuild-essential-arm64 crossbuild-essential-amd64 git pkg-config && apt-get clean && rm -rf /var/lib/apt/lists/*",
     "dpkg --add-architecture $CROSS_DEB_ARCH",
