--- a/Cross.toml
+++ b/Cross.toml
@@ -6,11 +6,10 @@ default-target = "x86_64-unknown-linux-gnu"
 pre-build = [
     "apt-get update && apt-get install -y g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross build-essential crossbuild-essential-arm64 crossbuild-essential-amd64 git pkg-config && apt-get clean && rm -rf /var/lib/apt/lists/*",
     "dpkg --add-architecture $CROSS_DEB_ARCH",
-    "apt-get update && apt-get install -y libpq-dev:$CROSS_DEB_ARCH libpq5:$CROSS_DEB_ARCH libsqlite3-dev:$CROSS_DEB_ARCH libsqlite3-0:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH && apt-get clean && rm -rf /var/lib/apt/lists/*"
+    "apt-get update && apt-get install -y libpq-dev:$CROSS_DEB_ARCH libpq5:$CROSS_DEB_ARCH libsqlite3-dev:$CROSS_DEB_ARCH libsqlite3-0:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH && apt-get clean && rm -rf /var/lib/apt/lists/*",
+    "rustup default nightly"
 ]
-
-[build.env]
-passthrough = [
+env.passthrough = [
     "FEDIPROTOSYNC_INCLUDE_COMMIT_HASH",
     "FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION",
     "PKG_CONFIG_SYSROOT_DIR=/"
@@ -18,9 +17,10 @@ passthrough = [
 
 [target.x86_64-unknown-linux-gnu]
 image = "docker.io/library/rust:1-bookworm"
-
-[target.x86_64-unknown-linux-gnu.env]
-passthrough = [
+pre-build = [
+    "rustup target add x86_64-unknown-linux-gnu"
+]
+env.passthrough = [
     "CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc",
     "CC_x86_64_unknown_linux_gnu=x86_64-linux-gnu-gcc",
     "CXX_x86_64_unknown_linux_gnu=x86_64-linux-gnu-g++"
@@ -28,9 +28,10 @@ passthrough = [
 
 [target.aarch64-unknown-linux-gnu]
 image = "docker.io/library/rust:1-bookworm"
-
-[target.aarch64-unknown-linux-gnu.env]
-passthrough = [
+pre-build = [
+    "rustup target add aarch64-unknown-linux-gnu"
+]
+env.passthrough = [
     "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc",
     "CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc",
     "CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g++"
