--- a/Cross.toml
+++ b/Cross.toml
@@ -4,10 +4,7 @@ xargo = false
 zig = false
 default-target = "x86_64-unknown-linux-gnu"
 pre-build = [
-    "apt-get update && apt-get install -y g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross build-essential crossbuild-essential-arm64 crossbuild-essential-amd64 git pkg-config && apt-get clean && rm -rf /var/lib/apt/lists/*",
-    "dpkg --add-architecture $CROSS_DEB_ARCH",
-    "apt-get update && apt-get install -y libpq-dev:$CROSS_DEB_ARCH libpq5:$CROSS_DEB_ARCH libsqlite3-dev:$CROSS_DEB_ARCH libsqlite3-0:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH && apt-get clean && rm -rf /var/lib/apt/lists/*",
-    "rustup default nightly"
+    "apt-get update && apt-get install -y g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross build-essential crossbuild-essential-arm64 crossbuild-essential-amd64 git pkg-config && apt-get clean && rm -rf /var/lib/apt/lists/*"
 ]
 env.passthrough = [
     "FEDIPROTOSYNC_INCLUDE_COMMIT_HASH",
@@ -18,7 +15,10 @@ env.passthrough = [
 [target.x86_64-unknown-linux-gnu]
 image = "docker.io/library/rust:1-bookworm"
 pre-build = [
-    "rustup target add x86_64-unknown-linux-gnu"
+    "rustup default nightly",
+    "rustup target add x86_64-unknown-linux-gnu",
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get install -y libpq-dev:$CROSS_DEB_ARCH libpq5:$CROSS_DEB_ARCH libsqlite3-dev:$CROSS_DEB_ARCH libsqlite3-0:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH && apt-get clean && rm -rf /var/lib/apt/lists/*"
 ]
 env.passthrough = [
     "CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc",
@@ -29,7 +29,10 @@ env.passthrough = [
 [target.aarch64-unknown-linux-gnu]
 image = "docker.io/library/rust:1-bookworm"
 pre-build = [
-    "rustup target add aarch64-unknown-linux-gnu"
+    "rustup default nightly",
+    "rustup target add aarch64-unknown-linux-gnu",
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get install -y libpq-dev:$CROSS_DEB_ARCH libpq5:$CROSS_DEB_ARCH libsqlite3-dev:$CROSS_DEB_ARCH libsqlite3-0:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH && apt-get clean && rm -rf /var/lib/apt/lists/*"
 ]
 env.passthrough = [
     "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc",
