Bundle certain dependencies for Windows

--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -12,5 +12,8 @@ license-file.workspace = true
 openssl = "0.10.68"
 thiserror = "2.0.10"
 
+[target.'cfg(windows)'.dependencies]
+openssl = { version = "0.10.68", features = ["vendored"] }
+
 [build-dependencies]
 fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
